# AV-HIL-Validation-Platform

./: CMakeLists.txt  README.md  network_interface_plugins.xml  package.xml
.github/workflows/: sensorforge.yml
bench/: CMakeLists.txt  README.md  bench_common.hpp  bench_crc32c.cpp  bench_e2e.cpp  bench_frame.cpp  bench_main.cpp  bench_ring.cpp
ci/: README.md  check_regression.py
ci/baseline/: benchmark_baseline.json
dashboard/: README.md  __init__.py  app.py  charts.py  prometheus_client.py  report_gen.py  requirements.txt
faults/: fault_engine.cpp  fault_engine.hpp  fault_types.hpp
fuzz/: CMakeLists.txt  README.md  fuzz_frame_parser.cpp  fuzz_replay_reader.cpp  fuzz_tcp_reassembly.cpp  fuzz_yaml_scenario.cpp
include/network_bridge/: network_bridge.hpp  subscription_manager.hpp
include/network_interfaces/: iouring_interface.hpp
include/sensorforge/core/: backpressure_policy.hpp  sensor_frame.hpp  seqlock.hpp  spsc_ring.hpp
include/sensorforge/protocol/: crc32c.hpp  frame.hpp  frame_codec.hpp
include/sensorforge/replay/: record.hpp  replay_index.hpp  segment.hpp  wal_reader.hpp  wal_writer.hpp
include/sensorforge/transport/: tcp_reassembler.hpp
metrics/: prometheus_exporter.cpp  prometheus_exporter.hpp  registry.hpp
report/: html_report.cpp  html_report.hpp  json_report.cpp  json_report.hpp  report_builder.cpp  report_types.hpp
scenario/: assertion.cpp  assertion.hpp  metrics.hpp  namespace_manager.hpp  parallel_runner.cpp  scenario.cpp  scenario.hpp  scenario_main.cpp  scenario_runner.cpp  scenario_runner.hpp
scenario/scenarios/: reference_01.yaml  reference_02.yaml  reference_03.yaml
sensors/: camera_publisher.cpp  can_publisher.cpp  gps_publisher.cpp  imu_publisher.cpp  lidar_publisher.cpp  synthetic_base.hpp
src/: network_bridge.cpp  subscription_manager.cpp
src/network_interfaces/: iouring_interface.cpp  tcp_interface.cpp
src/protocol/: frame_codec.cpp
src/replay/: wal_reader.cpp  wal_writer.cpp
standalone/: CMakeLists.txt
stress/: spsc_tsan_stress.cpp  tsan_suppressions.txt
test/unit/: test_backpressure.cpp  test_crc32c.cpp  test_fault_injection.cpp  test_frame_codec.cpp  test_main.cpp  test_metrics.cpp  test_parallel.cpp  test_report.cpp  test_scenario.cpp  test_seqlock.cpp  test_spsc_ring.cpp  test_support.hpp  test_tcp_reassembler.cpp  test_wal.cpp
transport/: bench_udp_transport.cpp
